# greenlens-esg

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  gen_frontend_data.py  pyproject.toml
config/: companies.yaml  ngo_sources.yaml
data/eval/: claims_to_label.jsonl  error_analysis.txt  frontend_claims.jsonl  labels.jsonl  labels_v1_backup.jsonl  rationale_sample.txt
data/evidence/: clientearth.json  corpus.jsonl  global_witness.json  reclaim_finance.json  tpi.json
data/evidence/guardian/: bp.json  chevron.json  conoco.json  eni.json  equinor.json  exxon.json  occidental.json  repsol.json  shell.json  totalenergies.json
data/historical/: gap_scores.jsonl
data/historical/claims/: bp_2021_claims.jsonl  chevron_2021_claims.jsonl  conoco_2021_claims.jsonl  eni_2021_claims.jsonl  equinor_2021_claims.jsonl  exxon_2021_claims.jsonl  occidental_2021_claims.jsonl  repsol_2021_claims.jsonl  shell_2021_claims.jsonl  totalenergies_2021_claims.jsonl
data/processed/reports/: bp.txt  bp_relevant.jsonl  bp_sentences.jsonl  chevron.txt  chevron_relevant.jsonl  chevron_sentences.jsonl  conoco.txt  eni.txt  (+22 more)
docs/: blog_post.md  index.html  skills.md  technical-report.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/api/: og.jsx
frontend/scripts/: gen-og.mjs
frontend/src/: App.jsx  index.css
scripts/: _check_verdicts.py  extract_historical_claims.py  fetch_historical_reports.py  gen_tracker_data.py  run_gap_scoring.py
src/claimify/: __init__.py
src/greenlens/: __init__.py  companies.py  config.py
(+64 files in other folders)
